create github pages

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="container">
         <div class="row justify-content-end">
             <div class="col-12 col-lg-7">
-                <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>Konstantin Rysyanin</strong></h1>
+                <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>Konstantin </strong>Rysyanin</h1>
                 
                 <p class="mbr-text mbr-fonts-style mbr-white display-7">web. mobile. multimedia.</p>
                 <div class="mbr-section-btn mt-3"><span class="mobi-mbri mobi-mbri-save mbr-iconfont mbr-iconfont-btn"></span><a class="btn btn-warning display-7" href="tel:+1-317-759-8727"><span class="mobi-mbri mobi-mbri-mobile mbr-iconfont mbr-iconfont-btn"></span>Ring the</a>
@@ -116,7 +116,7 @@
                     </p>
                 </div>
                 <div class="mbr-section-btn pb-3"><a class="btn btn-md btn-white display-4" href="https://krex.ml">DOWNLOAD NOW</a>
-                        <a class="btn btn-md btn-white-outline display-4" href="#">LEARN MORE</a></div>
+                        <a class="btn btn-md btn-white-outline display-4" href="index.html#services">LEARN MORE</a></div>
             </div>
             <div class="col-lg-5 col-md-12">
                 <div class="mbr-figure">
@@ -196,12 +196,12 @@
             <div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <a href="https://krex.ml"><img src="assets/images/product2.jpg" alt="https://krex.ml" title=""></a>
+                        <a href="https://krex.ml"><img src="assets/images/mbr-696x497.jpg" alt="https://krex.ml" title=""></a>
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5"><strong>Design</strong></h5>
-                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Website Design</h6>
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Mobirise is an easy website builder. Just drop site elements to your page, add content and style it to look the way you like.</p>
+                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Website and App Design</h6>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Make the look the way you like.</p>
                     </div>
                     <div class="mbr-section-btn item-footer mt-2"><a href="https://krex.ml" class="btn item-btn btn-black display-7">Start Now &gt;</a></div>
                 </div>
@@ -209,13 +209,12 @@
             <div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <a href="https://krex.ml"><img src="assets/images/product3.jpg" alt="https://krex.ml" title=""></a>
+                        <a href="https://krex.ml"><img src="assets/images/mbr-696x464.jpg" alt="https://krex.ml" title=""></a>
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5"><strong>Programming</strong></h5>
-                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">
-                            HTML/CSS Coding</h6>
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">You don't have to code to create your own site. Select one of available themes in the Mobirise Site Maker.</p>
+                        <h5 class="item-title mbr-fonts-style display-5"><strong>Engineering</strong></h5>
+                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Process and Workflow</h6>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">From Zero to Hero.</p>
                     </div>
                     <div class="mbr-section-btn item-footer mt-2"><a href="https://krex.ml" class="btn item-btn btn-black display-7" target="_blank">Start Now &gt;</a></div>
                 </div>
@@ -223,12 +222,12 @@
             <div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <a href="https://krex.ml"><img src="assets/images/product1.jpg" alt="https://krex.ml" title=""></a>
+                        <a href="https://krex.ml"><img src="assets/images/mbr-696x392.jpg" alt="https://krex.ml" title=""></a>
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5"><strong>Branding</strong></h5>
-                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Creating Your Brand</h6>
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Select the theme that suits you. Each theme in the Mobirise Website Software contains a set of unique blocks.<br></p>
+                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Brand Ideations</h6>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Fit the desire.<br></p>
                     </div>
                     <div class="mbr-section-btn item-footer mt-2"><a href="https://krex.ml" class="btn item-btn btn-black display-7">Start Now &gt;</a></div>
                 </div>
@@ -312,7 +311,7 @@
             <div class="line"></div>
         </div>
 
-        <h3 class="mbr-section-sub-title pb-4 mbr-normal mbr-fonts-style align-left display-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in nisi non arcu rutrum molestie.</h3>
+        <h3 class="mbr-section-sub-title pb-4 mbr-normal mbr-fonts-style align-left display-4">A killer mix of Technical and Artistic skills.</h3>
 
 
         <div class="media-container-row">
@@ -322,7 +321,7 @@
                     <span class="mbr-iconfont mbri-user"></span>
                 </div>
                 <div class="card-box">
-                    <h4 class="count card-title mbr-fonts-style pt-3 mbr-white mbr-bold align-center display-2">156</h4>
+                    <h4 class="count card-title mbr-fonts-style pt-3 mbr-white mbr-bold align-center display-2">96</h4>
                     <div class="line-wrap2">
                         <div class="line2"></div>
                     </div>
@@ -348,12 +347,12 @@
                     <span class="mbr-iconfont mbri-users"></span>
                 </div>
                 <div class="card-box">
-                    <h4 class="count card-title mbr-fonts-style pt-3 mbr-white mbr-bold align-center display-2">120</h4>
+                    <h4 class="count card-title mbr-fonts-style pt-3 mbr-white mbr-bold align-center display-2">32</h4>
                     <div class="line-wrap2">
                         <div class="line2"></div>
                     </div>
                     <p class="mbr-text mbr-fonts-style mbr-white mbr-normal align-center display-7">
-                        Google Workplace</p>
+                        Google Workplaces</p>
                 </div>
             </div>
 
