create github pages

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                 <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>Konstantin </strong>Rysyanin</h1>
                 
                 <p class="mbr-text mbr-fonts-style mbr-white display-7">web. mobile. multimedia.</p>
-                <div class="mbr-section-btn mt-3"><span class="mobi-mbri mobi-mbri-save mbr-iconfont mbr-iconfont-btn"></span><a class="btn btn-warning display-7" href="tel:+1-317-759-8727"><span class="mobi-mbri mobi-mbri-mobile mbr-iconfont mbr-iconfont-btn"></span>Ring the</a>
-                    <a class="btn btn-primary display-7" href="tg://resolve?domain=krex_fex_pex"><span class="mobi-mbri mobi-mbri-paper-plane mbr-iconfont mbr-iconfont-btn"></span>Send a</a></div>
+                <div class="mbr-section-btn mt-3"><span class="mobi-mbri mobi-mbri-save mbr-iconfont mbr-iconfont-btn"></span><a class="btn btn-warning-outline display-7" href="tel:+1-317-759-8727"><span class="mobi-mbri mobi-mbri-mobile mbr-iconfont mbr-iconfont-btn"></span>Ring the</a>
+                    <a class="btn btn-info-outline display-7" href="tg://resolve?domain=krex_fex_pex"><span class="mobi-mbri mobi-mbri-paper-plane mbr-iconfont mbr-iconfont-btn"></span>Send a</a></div>
             </div>
         </div>
     </div>
@@ -112,7 +112,7 @@
                 </div>
                 <div class=" mbr-white pb-3 align-left">
                     <p class="mbr-section-subtitle mbr-fonts-style mbr-text display-7">
-                        Easy Drop-down and Grid.
+                        Easy UI's to get thing done. Drop-down and Grid.
                     </p>
                 </div>
                 <div class="mbr-section-btn pb-3"><a class="btn btn-md btn-white display-4" href="https://krex.ml">DOWNLOAD NOW</a>
@@ -130,11 +130,9 @@
                     <span class="mbr-iconfont mbri-mobile"></span>
                 </div>
                 <div class="card-box">
-                    <h4 class="card-title mbr-fonts-style display-5">
-                        Block Backgrounds
-                    </h4>
+                    <h4 class="card-title mbr-fonts-style display-5">Adapt</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
-                        The blocks of different types allow using an Image, gradient, parallax, or video background: it's perfect for intro blocks!
+                        The blocks of different types allow using an Image, gradient, parallax, or video background!
                 </p></div>
             </div>
 
@@ -143,39 +141,30 @@
                     <span class="mbr-iconfont mbri-rocket"></span>
                 </div>
                 <div class="card-box">
-                    <h4 class="card-title mbr-fonts-style display-5">
-                        Fonts and Icons
-                    </h4>
-                    <p class="mbr-text mbr-fonts-style display-7">
-                       Choose from the list of 800+ Google Fonts and retina-ready free icons to design a unique look &amp; feel with some typography flair.
+                    <h4 class="card-title mbr-fonts-style display-5">Streamline</h4>
+                    <p class="mbr-text mbr-fonts-style display-7">Google Fonts and retina-ready icons, unique look &amp; feel with typography.
                     </p>
                 </div>
             </div>
 
             <div class="card  p-5 col-12 col-md-6 col-lg-3">
                 <div class="card-img pb-4">
-                    <span class="mbr-iconfont mbri-clock"></span>
+                    <span class="mbr-iconfont mobi-mbri-growing-chart mobi-mbri"></span>
                 </div>
                 <div class="card-box">
-                    <h4 class="card-title mbr-fonts-style display-5">
-                        Contact forms
-                    </h4>
-                    <p class="mbr-text mbr-fonts-style display-7">
-                        Easily add subscribe and contact forms without any server-side integration. Just link your email to form and get submissions instantly.  
+                    <h4 class="card-title mbr-fonts-style display-5">Achieve</h4>
+                    <p class="mbr-text mbr-fonts-style display-7">Up-sell and subscribe forms.  
                     </p>
                 </div>
             </div>
 
             <div class="card  p-5 col-12 col-md-6 col-lg-3">
                 <div class="card-img pb-4">
-                    <span class="mbr-iconfont mbri-clock"></span>
+                    <span class="mbr-iconfont mobi-mbri-features mobi-mbri"></span>
                 </div>
                 <div class="card-box">
-                    <h4 class="card-title mbr-fonts-style display-5">
-                        Hosting
-                    </h4>
-                    <p class="mbr-text mbr-fonts-style display-7">
-                        New Publish option allows you to put the site online with a single click to be viewed by the public.
+                    <h4 class="card-title mbr-fonts-style display-5">Iterate</h4>
+                    <p class="mbr-text mbr-fonts-style display-7">Renew, rework, improve, repeat.
                     </p>
                 </div>
             </div>
