--- a/index.html
+++ b/index.html
@@ -561,11 +561,11 @@
     <div class="container align-center">
         <div class="row">
             <div class="col-md-12 col-lg-6 py-4 m-auto">
-                <h1 class="mbr-section-title mbr-regular pb-3 align-left mbr-fonts-style display-1">IT Experience</h1>
+                <h1 class="mbr-section-title mbr-regular pb-3 align-left mbr-fonts-style display-1">Experience</h1>
                 
-                <p class="mbr-text mbr-light pb-3 align-left mbr-fonts-style display-7">Over 20 Years of progressive IT Experience.</p>
-                <div class="align-left mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="https://krex.ml">READ MORE</a>
-                    <a class="btn btn-md btn-secondary display-4" href="https://krex.ml">CONTACT US</a></div>
+                <p class="mbr-text mbr-light pb-3 align-left mbr-fonts-style display-7">Over 20 Years of progressive IT and Marketing Experience</p>
+                <div class="align-left mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="https://krex.ml">MORE</a>
+                    <a class="btn btn-md btn-info display-4" href="tg://resolve?domain=krex_fex_pex">CONTACT</a></div>
             </div>
 
             <div class="col-lg-6 col-md-12 align-center">
