create github pages

--- a/index.html
+++ b/index.html
@@ -246,9 +246,9 @@
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5"><strong>Design</strong></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Website and App Design</h6>
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Make the look the way you like.</p>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Make the interaction flow, look and feel the way you like.</p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="https://krex.ml" class="btn item-btn btn-black display-7">Start Now &gt;</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://krex.ml" class="btn item-btn btn-black display-7">Dream it &gt;</a></div>
                 </div>
             </div>
             <div class="item features-image сol-12 col-md-6 col-lg-4">
@@ -261,7 +261,7 @@
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Process and Workflow</h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">From Zero to Hero.</p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="https://krex.ml" class="btn item-btn btn-black display-7" target="_blank">Start Now &gt;</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://krex.ml" class="btn item-btn btn-black display-7" target="_blank">Make it &gt;</a></div>
                 </div>
             </div>
             <div class="item features-image сol-12 col-md-6 col-lg-4">
@@ -272,9 +272,9 @@
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5"><strong>Branding</strong></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Brand Ideations</h6>
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Fit the desire.<br></p>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Fit the customer needs and consumer desires.<br></p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="https://krex.ml" class="btn item-btn btn-black display-7">Start Now &gt;</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://krex.ml" class="btn item-btn btn-black display-7">Position it &gt;</a></div>
                 </div>
             </div>
             
@@ -363,7 +363,7 @@
 
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-img pb-3">
-                    <span class="mbr-iconfont mbri-user"></span>
+                    <span class="mbr-iconfont mobi-mbri-globe-2 mobi-mbri"></span>
                 </div>
                 <div class="card-box">
                     <h4 class="count card-title mbr-fonts-style pt-3 mbr-white mbr-bold align-center display-2">96</h4>
@@ -376,7 +376,7 @@
 
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-img pb-3">
-                    <span class="mbr-iconfont mbri-home"></span>
+                    <span class="mbr-iconfont mobi-mbri-mobirise mobi-mbri"></span>
                 </div>
                 <div class="card-box">
                     <h4 class="count card-title mbr-fonts-style pt-3 mbr-white mbr-bold align-center display-2">42</h4>
@@ -389,7 +389,7 @@
 
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-img pb-3">
-                    <span class="mbr-iconfont mbri-users"></span>
+                    <span class="mbr-iconfont mobi-mbri-users mobi-mbri"></span>
                 </div>
                 <div class="card-box">
                     <h4 class="count card-title mbr-fonts-style pt-3 mbr-white mbr-bold align-center display-2">32</h4>
@@ -403,7 +403,7 @@
 
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-img pb-3">
-                    <span class="mbr-iconfont mbri-file"></span>
+                    <span class="mbr-iconfont mobi-mbri-cash mobi-mbri"></span>
                 </div>
                 <div class="card-box">
                     <h4 class="count card-title mbr-fonts-style pt-3 mbr-white mbr-bold align-center display-2">46</h4>
