create github pages

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="container">
         <div class="row justify-content-end">
             <div class="col-12 col-lg-7">
-                <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>Konstantin </strong>Rysyanin</h1>
+                <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>Konstantin</strong></h1>
                 
                 <p class="mbr-text mbr-fonts-style mbr-white display-7">web. mobile. multimedia.</p>
                 <div class="mbr-section-btn mt-3"><span class="mobi-mbri mobi-mbri-save mbr-iconfont mbr-iconfont-btn"></span><a class="btn btn-danger-outline display-7" href="tel:+1-317-759-8727"><span class="mobi-mbri mobi-mbri-mobile mbr-iconfont mbr-iconfont-btn"></span>Ring the</a>
@@ -444,8 +444,7 @@
                     </div>
                 </div> 
                 <div class="mbr-crt-title pt-3">
-                    <h4 class="card-title py-2 mbr-fonts-style display-5">
-                        Mobile &amp; Web UX</h4>
+                    <h4 class="card-title py-2 mbr-fonts-style display-5">Seamless UX</h4>
                 </div>
                 <div class="mbr-crt-text pt-2">
                     <p class="mbr-fonts-style card-text display-7">
