--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="#">Expertise</a></li>
-                    <li class="nav-item"><a class="nav-link link text-black display-4" href="#">Competencies</a></li>
-                    <li class="nav-item"><a class="nav-link link text-black display-4" href="#">Advantages</a>
+                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="#">Expertise</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#features3-b">Features</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#Process">Process</a></li>
+                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#competencies">Competencies</a></li>
+                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#Advantages">Advantages</a>
                     </li></ul>
                 
                 <div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="tel:+1-317-759-8727"><span class="mobi-mbri mobi-mbri-phone mbr-iconfont mbr-iconfont-btn"></span>Pick Up the</a></div>
@@ -228,7 +228,7 @@
     </div>
 </section>
 
-<section class="extFeatures cid-sdGOnBcO8V" id="extFeatures22-c">
+<section class="extFeatures cid-sdGOnBcO8V" id="Process">
 
     
 
@@ -241,14 +241,13 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/1.jpg" alt="">
+                        <img src="assets/images/mbr-1-506x285.jpeg" alt="krex.ml">
                     </div>
                     <div class="card-box align-left">
-                        <h4 class="card-title align-left pb-3 mbr-fonts-style display-5">Web</h4>
-                        <p class="mbr-text align-left mbr-fonts-style display-4">Lorem ipsum dolor sit amet, conse ctetue
-                            adipiscing elit, sed diam nonum nibhie.</p>
+                        <h4 class="card-title align-left pb-3 mbr-fonts-style display-5">Idea</h4>
+                        <p class="mbr-text align-left mbr-fonts-style display-4">Ideation, Requirements Collection.</p>
 
-                        <div class="mbr-link-btn"><a class="btn btn-md btn-danger display-4" href="#"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>READ MORE</a></div>
+                        <div class="mbr-link-btn"><a class="btn btn-md btn-danger display-4" href="index.html#Process"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>IDEA</a></div>
 
                     </div>
                 </div>
@@ -257,14 +256,13 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/17.jpg" alt="">
+                        <img src="assets/images/mbr-506x336.jpg" alt="krex.ml">
                     </div>
                     <div class="card-box align-left">
-                        <h4 class="card-title pb-3 align-left mbr-fonts-style display-5">Apps</h4>
-                        <p class="mbr-text align-left mbr-fonts-style display-4">Lorem ipsum dolor sit amet, conse ctetue
-                            adipiscing elit, sed diam nonum nibhie.</p>
+                        <h4 class="card-title pb-3 align-left mbr-fonts-style display-5">Experiment</h4>
+                        <p class="mbr-text align-left mbr-fonts-style display-4">Concept, Experiments, Hypothesis,&nbsp;MVP (Minimum Viable Product) build.</p>
 
-                        <div class="mbr-link-btn"><a class="btn btn-md btn-danger display-4" href="#"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>READ MORE</a></div>
+                        <div class="mbr-link-btn"><a class="btn btn-md btn-danger display-4" href="index.html#Process"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>EXPERIMENT</a></div>
                     </div>
                 </div>
             </div>
@@ -272,15 +270,14 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/32.jpg" alt="">
+                        <img src="assets/images/mbr-506x339.jpg" alt="krex.ml">
                     </div>
                     <div class="card-box align-left">
                         <h4 class="card-title align-left pb-3 mbr-fonts-style display-5">
-                            Mu</h4>
-                        <p class="mbr-text align-left mbr-fonts-style display-4">Lorem ipsum dolor sit amet, conse ctetue
-                            adipiscing elit, sed diam nonum nibhie.</p>
+                            Production</h4>
+                        <p class="mbr-text align-left mbr-fonts-style display-4">New Ideas, Reintroduction into MVP.</p>
 
-                        <div class="mbr-link-btn"><a class="btn btn-md btn-danger display-4" href="#"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>READ MORE</a></div>
+                        <div class="mbr-link-btn"><a class="btn btn-md btn-danger display-4" href="index.html#Process"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>PRODUCTION</a></div>
                     </div>
                 </div>
             </div>
@@ -288,14 +285,13 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/38.jpg" alt="">
+                        <img src="assets/images/mbr-506x338.jpg" alt="krex.ml">
                     </div>
                     <div class="card-box align-left">
-                        <h4 class="card-title align-left pb-3 mbr-fonts-style display-5">Web Solution</h4>
-                        <p class="mbr-text align-left mbr-fonts-style display-4">Lorem ipsum dolor sit amet, conse ctetue
-                            adipiscing elit, sed diam nonum nibhie.</p>
+                        <h4 class="card-title align-left pb-3 mbr-fonts-style display-5">Feedback</h4>
+                        <p class="mbr-text align-left mbr-fonts-style display-4">Feedback and Reintroduction of New Ideas, Experiment.</p>
 
-                        <div class="mbr-link-btn"><a class="btn btn-md btn-danger display-4" href="#"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>READ MORE</a></div>
+                        <div class="mbr-link-btn"><a class="btn btn-md btn-danger display-4" href="index.html#Process"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>FEEDBACK</a></div>
                     </div>
                 </div>
             </div>
@@ -522,8 +518,7 @@
                     <h4 class="card-title py-2 mbr-fonts-style display-5">Seamless UX</h4>
                 </div>
                 <div class="mbr-crt-text pt-2">
-                    <p class="mbr-fonts-style card-text display-7">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    <p class="mbr-fonts-style card-text display-7">Make activity transitions fast and reliable.
                     </p>
                 </div>                 
             </div>
@@ -538,8 +533,7 @@
                     <h4 class="card-title py-2 mbr-fonts-style display-5">UI Perfection</h4>
                 </div>
                 <div class="mbr-crt-text pt-2">
-                    <p class="mbr-fonts-style card-text display-7">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    <p class="mbr-fonts-style card-text display-7">Easy to use User Interface.
                     </p>
                 </div>                 
             </div>
@@ -555,8 +549,7 @@
                         User-Centricity</h4>
                 </div>     
                 <div class="mbr-crt-text pt-2">
-                    <p class="mbr-fonts-style card-text display-7">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    <p class="mbr-fonts-style card-text display-7">Human in mind.
                     </p>
                 </div>            
             </div>
@@ -571,8 +564,7 @@
                     <h4 class="card-title py-2 mbr-fonts-style display-5">Ergonimics</h4>
                 </div>   
                 <div class="mbr-crt-text pt-2">
-                    <p class="mbr-fonts-style card-text display-7">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    <p class="mbr-fonts-style card-text display-7">No need of out of pocket gymnastics.
                     </p>
                 </div>              
             </div>
