create github pages

--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="#">Expertise</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#features3-b">Features</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#Process">Process</a></li>
-                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#competencies">Competencies</a></li>
-                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#Advantages">Advantages</a>
+                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-secondary display-4" href="#">Expertise</a></li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="index.html#features3-b">Features</a></li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="index.html#Process">Process</a></li>
+                    <li class="nav-item"><a class="nav-link link text-secondary display-4" href="index.html#competencies">Competencies</a></li>
+                    <li class="nav-item"><a class="nav-link link text-secondary display-4" href="index.html#Advantages">Advantages</a>
                     </li></ul>
                 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="tel:+1-317-759-8727"><span class="mobi-mbri mobi-mbri-phone mbr-iconfont mbr-iconfont-btn"></span>Pick Up the</a></div>
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-secondary-outline display-4" href="tel:+1-317-759-8727"><span class="mobi-mbri mobi-mbri-phone mbr-iconfont mbr-iconfont-btn"></span>Pick Up the</a></div>
             </div>
         </div>
     </nav>
