create github pages

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
                         Easy UI's to get thing done. Drop-down and Grid.
                     </p>
                 </div>
-                <div class="mbr-section-btn pb-3"><a class="btn btn-md btn-white display-4" href="https://krex.ml">DOWNLOAD NOW</a>
-                        <a class="btn btn-md btn-white-outline display-4" href="index.html#services">LEARN MORE</a></div>
+                <div class="mbr-section-btn pb-3"><a class="btn btn-md btn-white display-4" href="index.html#Process">PROCESS</a>
+                        <a class="btn btn-md btn-white-outline display-4" href="index.html#competencies">COMPETENCIES</a></div>
             </div>
             <div class="col-lg-5 col-md-12">
                 <div class="mbr-figure">
