--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/x-circa-128x128.png" type="image/x-icon">
-  <meta name="description" content="">
+  <meta name="description" content="KR: eXperience, eXecute, eXpand">
   
   
-  <title>KRX</title>
+  <title>KR.X</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
