--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 
             <div class="col-md-4">
                 <label class="container2">
-                    <p class="mbr-text mbr-fonts-style display-7">Hybrid Apps</p>
+                    <p class="mbr-text mbr-fonts-style display-7">API</p>
                     <input type="checkbox" checked="">
                     <span class="checkmark"></span>
                 </label>
