--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                         
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">Set new Standards in Interactivity.<br></p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="index.html#features3-b" class="btn btn-primary item-btn display-7" target="_blank">Interact &gt;</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="index.html#features3-b" class="btn btn-primary item-btn display-7" target="_blank">Interactive &gt;</a></div>
                 </div>
             </div>
         </div>
