--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                 <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>KR.X</strong></h1>
                 
                 <p class="mbr-text mbr-fonts-style mbr-white display-7">web. mobile. multimedia.</p>
-                <div class="mbr-section-btn mt-3"><span class="mobi-mbri mobi-mbri-save mbr-iconfont mbr-iconfont-btn"></span><a class="btn btn-danger-outline display-7" href="tel:+1-317-759-8727"><span class="mobi-mbri mobi-mbri-mobile mbr-iconfont mbr-iconfont-btn"></span>Ring the</a>
-                    <a class="btn btn-info-outline display-7" href="tg://resolve?domain=krex_fex_pex"><span class="mobi-mbri mobi-mbri-paper-plane mbr-iconfont mbr-iconfont-btn"></span>Send a</a></div>
+                <div class="mbr-section-btn mt-3"><span class="mobi-mbri mobi-mbri-save mbr-iconfont mbr-iconfont-btn"></span><a class="btn btn-warning-outline display-7" href="tel:+1-317-759-8727"><span class="mobi-mbri mobi-mbri-mobile mbr-iconfont mbr-iconfont-btn"></span>Ring the</a>
+                    <a class="btn btn-success-outline display-7" href="tg://resolve?domain=krex_fex_pex"><span class="mobi-mbri mobi-mbri-paper-plane mbr-iconfont mbr-iconfont-btn"></span>Send a</a></div>
             </div>
         </div>
     </div>
